Compatibility with JDK 25